# mini-projeto-2

./: README.md  notebook.ipynb  pyproject.toml  requirements.txt
neural_networks/: lstm.py  rnn.py
nlp/: preprocessor.py  vocab.json
presentation/: app.py
results/: lstm_results.json  rnn_results.json
